src/app/components/cad-item/cad-item.component.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

*{
    font-family: 'Roboto', sans-serif;
}

h5{
    margin-top: 20px;
    margin-bottom: 30px;;
    font-weight: bold;
}

input, label, textarea{
    max-width: 300px;
}

select{
    width: 227px;
}

.tabEsc{
    margin-top: 40px;
}

#divCadItem{
    height: 85vh;
    width: 100%;
}

.transparencia{
    opacity: .1;
}

.alert{
    display: flex;
    max-height: 42px;
    justify-content: center;
    align-items: center;
}


h3{
    font-size: 2rem;
}

label{
    font-size: 1.1rem;
}

#btnCadastro{
    font-size: 1.3rem;
}

